# expand-fasta

./: README.md  pyproject.toml
src/expand_fasta/: expand.py  main.py
