[tool.poetry]
name = "expand-fasta"
version = "0.1.0"
description = "Expands a fasta file using a provided name mapping"
authors = ["Daniel Le Jeune <daniel.h.lejeune@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
rich = "^13.9.4"

[tool.poetry.scripts]
expand-fasta = 'expand_fasta.main:run'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
